--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -1,8 +1,9 @@
 spring.application.name=Premier Zone
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=PremStats;encrypt=true;trustServerCertificate=true
-spring.datasource.username=sa
-spring.datasource.password=
+# Replace with your own database details
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=YOUR_DB_NAME;encrypt=true;trustServerCertificate=true
+spring.datasource.username=YOUR_USERNAME
+spring.datasource.password=YOUR_PASSWORD
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
